--- a/env.sample
+++ b/env.sample
@@ -57,6 +57,15 @@ AUTH_SESSION_DURATION_HOURS=24
 AUTH_REFRESH_TOKEN_DURATION_DAYS=30
 
 # ============================================
+# Development Only - Auth Bypass
+# ============================================
+# ⚠️ DEVELOPMENT ONLY: Set to 'true' to bypass authentication during development
+# ⚠️ SECURITY WARNING: This will ONLY work in development (NODE_ENV !== 'production')
+# ⚠️ NEVER enable this in production
+# Default: false
+BYPASS_AUTH=false
+
+# ============================================
 # Next.js Configuration
 # ============================================
 # Node environment: 'development' or 'production'
