--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^12.16.0",
     "next": "14.1.0",
     "next-intl": "^3.0.0",
+    "next-seo": "^6.4.0",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
