feature: apis refactor and metrics

--- a/env.sample
+++ b/env.sample
@@ -66,6 +66,14 @@ AUTH_REFRESH_TOKEN_DURATION_DAYS=30
 BYPASS_AUTH=false
 
 # ============================================
+# Metrics API Configuration
+# ============================================
+# API Key for authenticating requests from checkout to metrics endpoint
+# This key should be kept secret and only shared with the checkout application
+# Generate a strong random key (e.g., using openssl rand -hex 32)
+METRICS_API_KEY=your-metrics-api-key-here
+
+# ============================================
 # Next.js Configuration
 # ============================================
 # Node environment: 'development' or 'production'
