--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@heroui/react": "^2.8.5",
     "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-query": "^5.17.0",
+    "@tiptap/extension-link": "^3.10.1",
     "@tiptap/react": "^2.1.0",
     "@tiptap/starter-kit": "^2.1.0",
     "framer-motion": "^12.16.0",
