--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@tiptap/extension-link": "^3.10.1",
     "@tiptap/react": "^2.1.0",
     "@tiptap/starter-kit": "^2.1.0",
+    "autoprefixer": "^10.4.17",
     "framer-motion": "^12.16.0",
     "next": "14.1.0",
     "next-intl": "^3.0.0",
     "next-seo": "^6.4.0",
+    "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
@@ -45,13 +47,10 @@
     "@types/node": "^22.15.29",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
-    "autoprefixer": "^10.4.17",
     "dotenv": "^17.2.3",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
-    "postcss": "^8.4.35",
     "prettier": "^3.4.2",
-    "tsx": "^4.7.0",
-    "typescript": "^5.8.3"
+    "tsx": "^4.7.0"
   }
 }
