--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "@types/node": "^22.15.29",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "dotenv": "^17.2.3",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
