--- a/env.sample
+++ b/env.sample
@@ -74,6 +74,13 @@ BYPASS_AUTH=false
 METRICS_API_KEY=your-metrics-api-key-here
 
 # ============================================
+# Google Tag Manager Configuration
+# ============================================
+# Google Tag Manager container ID (e.g., "GTM-XXXXXXX")
+# Leave empty if not using GTM
+NEXT_PUBLIC_GTM_CONTAINER_ID=
+
+# ============================================
 # Next.js Configuration
 # ============================================
 # Node environment: 'development' or 'production'
