feature: public pages

--- a/env.sample
+++ b/env.sample
@@ -83,6 +83,10 @@ NEXT_PUBLIC_GTM_CONTAINER_ID=
 # ============================================
 # Next.js Configuration
 # ============================================
+# Base URL for the application (used in metadata and SEO)
+# Default: https://bolt.bckstg.com.br
+NEXT_PUBLIC_BASE_URL=https://bolt.bckstg.com.br
+
 # Node environment: 'development' or 'production'
 # This affects cookie security flags and other behaviors
 # Default: 'development' (automatically set by Next.js)
