--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "eslint": "^9.39.1",
     "eslint-config-next": "14.1.0",
     "prettier": "^3.4.2",
+    "sharp": "^0.34.4",
     "tsx": "^4.7.0"
   }
 }
