--- a/env.sample
+++ b/env.sample
@@ -92,3 +92,38 @@ NEXT_PUBLIC_BASE_URL=https://bolt.bckstg.com.br
 # Default: 'development' (automatically set by Next.js)
 NODE_ENV=development
 
+# ============================================
+# BoltX AI Configuration
+# ============================================
+# Enable BoltX AI-powered optimizations
+# Default: false
+BOLTX_ENABLED=false
+
+# OpenAI API Key for generative AI insights
+# Get from https://platform.openai.com/api-keys
+OPENAI_API_KEY=
+
+# OpenAI Model to use (default: gpt-4-turbo-preview)
+BOLTX_OPENAI_MODEL=gpt-4-turbo-preview
+
+# Maximum tokens for OpenAI responses
+BOLTX_OPENAI_MAX_TOKENS=2000
+
+# Temperature for OpenAI (0.0-2.0, default: 0.7)
+BOLTX_OPENAI_TEMPERATURE=0.7
+
+# AI Provider: 'openai' or 'local'
+BOLTX_AI_PROVIDER=openai
+
+# Cache enabled for AI responses (default: true)
+BOLTX_CACHE_ENABLED=true
+
+# Cache TTL in seconds (default: 3600 = 1 hour)
+BOLTX_CACHE_TTL=3600
+
+# Rate limit for AI requests per minute (default: 60)
+BOLTX_RATE_LIMIT=60
+
+# Prediction model version (default: v1)
+BOLTX_PREDICTION_MODEL_VERSION=v1
+
