--- a/env.sample
+++ b/env.sample
@@ -73,6 +73,12 @@ BYPASS_AUTH=false
 # Generate a strong random key (e.g., using openssl rand -hex 32)
 METRICS_API_KEY=your-metrics-api-key-here
 
+# CORS Allowed Origins (comma-separated list)
+# Origins allowed to make CORS requests to public API endpoints
+# Example: http://localhost:3000,https://checkout.example.com
+# In development, localhost is automatically allowed
+CORS_ALLOWED_ORIGINS=
+
 # ============================================
 # Google Tag Manager Configuration
 # ============================================
