--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:boltx": "vitest run src/app/api/boltx/**",
     "type-check": "tsc --noEmit",
     "migrate:list": "tsx scripts/run-migrations-simple.ts",
     "migrate": "tsx scripts/run-migrations.ts",
@@ -47,13 +51,19 @@
     "zustand": "^4.5.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.5.2",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
+    "@vitest/ui": "^2.1.9",
     "dotenv": "^17.2.3",
     "eslint": "^9.39.1",
     "eslint-config-next": "14.1.0",
+    "jsdom": "^25.0.1",
     "prettier": "^3.4.2",
     "sharp": "^0.34.4",
-    "tsx": "^4.7.0"
+    "tsx": "^4.7.0",
+    "vitest": "^2.1.9"
   }
 }
