--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@heroui/react": "^2.8.5",
+    "@internationalized/date": "^3.10.0",
     "@netlify/plugin-nextjs": "^5.11.2",
+    "@react-types/datepicker": "^3.13.2",
     "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-query": "^5.17.0",
     "@tiptap/extension-link": "^3.10.1",
@@ -35,6 +37,7 @@
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
     "autoprefixer": "^10.4.17",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.16.0",
     "next": "14.1.0",
     "next-intl": "^3.0.0",
@@ -42,6 +45,7 @@
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
+    "react-day-picker": "^9.11.1",
     "react-dom": "^18.2.0",
     "recharts": "^2.10.0",
     "sonner": "^2.0.7",
