feature: boltmetrics dashboard

--- a/env.sample
+++ b/env.sample
@@ -37,6 +37,12 @@ EMAIL_SERVICE_API_KEY=your-email-api-key-here
 # Default: 'noreply@example.com'
 EMAIL_SERVICE_FROM=noreply@yourdomain.com
 
+# Contact email for receiving notifications
+# Used for contact form submissions and new account creation notifications
+# If not set, falls back to EMAIL_SERVICE_FROM
+# Default: (uses EMAIL_SERVICE_FROM)
+CONTACT_EMAIL=hello@yourdomain.com
+
 # ============================================
 # Authentication Configuration
 # ============================================
