--- a/env.sample
+++ b/env.sample
@@ -139,3 +139,31 @@ BOLTX_RATE_LIMIT=60
 # Prediction model version (default: v1)
 BOLTX_PREDICTION_MODEL_VERSION=v1
 
+# ============================================
+# Payment Gateway Configuration
+# ============================================
+# Payment gateway provider: 'stripe', 'paddle', etc.
+# Default: 'stripe'
+PAYMENT_GATEWAY_PROVIDER=stripe
+
+# Stripe Configuration
+# Stripe secret key (server-only - NEVER expose to client)
+# Get from https://dashboard.stripe.com/apikeys
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
+
+# Stripe publishable key (public - used client-side)
+# Get from https://dashboard.stripe.com/apikeys
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
+
+# Stripe webhook secret (for verifying webhook signatures)
+# Get from https://dashboard.stripe.com/webhooks
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
+
+# Default currency for payments (ISO 4217 code)
+# Default: 'USD'
+DEFAULT_PAYMENT_CURRENCY=USD
+
+# Supported currencies (comma-separated)
+# Default: 'USD,BRL'
+SUPPORTED_CURRENCIES=USD,BRL
+
