--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@internationalized/date": "^3.10.0",
     "@netlify/plugin-nextjs": "^5.11.2",
     "@react-types/datepicker": "^3.13.2",
+    "@stripe/react-stripe-js": "^2.9.0",
+    "@stripe/stripe-js": "^2.4.0",
     "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-query": "^5.17.0",
     "@tiptap/extension-link": "^3.10.1",
@@ -49,6 +51,7 @@
     "react-dom": "^18.2.0",
     "recharts": "^2.10.0",
     "sonner": "^2.0.7",
+    "stripe": "^14.25.0",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.8.3",
     "zod": "^4.1.12",
